--- a/app/src/main/res/layout/fragment_create_pin.xml
+++ b/app/src/main/res/layout/fragment_create_pin.xml
@@ -28,17 +28,17 @@
             android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/colorPrimary">
+            android:background="@android:drawable/dialog_holo_light_frame"
+            tools:backgroundTint="@color/common_google_signin_btn_text_dark_default">
 
             <ImageView
                 android:id="@+id/photoPreview"
-                android:layout_width="280dp"
+                android:layout_width="279dp"
                 android:layout_height="156dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="12dp"
                 android:layout_marginEnd="8dp"
-                android:contentDescription="photoPreview"
-                android:src="@android:color/holo_orange_light"
+                android:contentDescription="@string/review_photo_description"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.333"
                 app:layout_constraintStart_toStartOf="parent"
@@ -47,14 +47,14 @@
 
             <EditText
                 android:id="@+id/editPinName"
-                android:layout_width="276dp"
+                android:layout_width="279dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginEnd="8dp"
                 android:ems="10"
+                android:hint="@string/create_pin_name"
                 android:inputType="textPersonName"
-                android:text="@string/create_pin_name"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.333"
                 app:layout_constraintStart_toStartOf="parent"
@@ -66,7 +66,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="4dp"
-                android:text="Photo:"
+                android:text="@string/review_photo"
                 app:layout_constraintBottom_toTopOf="@+id/editPinName"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/editPinName"
@@ -76,114 +76,102 @@
                 android:id="@+id/uploadTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="184dp"
-                android:text="Upload:"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="192dp"
+                android:text="@string/review_upload"
                 app:layout_constraintEnd_toStartOf="@+id/importPhotoButton"
                 app:layout_constraintTop_toBottomOf="@+id/photoPreview" />
 
             <ImageButton
                 android:id="@+id/importPhotoButton"
-                android:layout_width="40dp"
-                android:layout_height="29dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="24dp"
+                android:layout_width="31dp"
+                android:layout_height="22dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="32dp"
+                android:contentDescription="@string/review_upload_button"
                 android:src="@android:drawable/ic_menu_upload"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/photoPreview" />
 
-            <TextView
-                android:id="@+id/descriptionTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="17dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:text="Description:"
-                android:maxLines="10"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.08"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/uploadTextView" />
-
             <EditText
                 android:id="@+id/editPinDescription"
-                android:layout_width="274dp"
-                android:layout_height="109dp"
+                android:layout_width="279dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:ems="10"
+                android:hint="@string/description_text_view"
                 android:inputType="textMultiLine"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.4"
+                app:layout_constraintHorizontal_bias="0.511"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />
+                app:layout_constraintTop_toBottomOf="@+id/importPhotoButton" />
 
             <TextView
                 android:id="@+id/bestPhotoTimeTextView"
-                android:layout_width="139dp"
+                android:layout_width="131dp"
                 android:layout_height="23dp"
-                android:layout_marginStart="24dp"
+                android:layout_marginStart="32dp"
                 android:layout_marginTop="8dp"
-                android:text="Best Time for Photo:"
+                android:text="@string/review_best_photo_time"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/editPinDescription" />
 
             <Spinner
                 android:id="@+id/bestPhotoTimeSpinner"
-                android:layout_width="94dp"
+                android:layout_width="143dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.52"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/bestPhotoTimeTextView"
                 app:layout_constraintTop_toBottomOf="@+id/editPinDescription" />
 
-            <TextView
-                android:id="@+id/instructionTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="12dp"
-                android:text="Instructions:"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/bestPhotoTimeTextView" />
-
             <EditText
                 android:id="@+id/editPinInstructions"
-                android:layout_width="271dp"
-                android:layout_height="136dp"
+                android:layout_width="279dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:ems="10"
+                android:hint="@string/instructions_text_view"
                 android:inputType="textMultiLine"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.512"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/instructionTextView" />
+                app:layout_constraintTop_toBottomOf="@+id/bestPhotoTimeTextView" />
 
             <Button
                 android:id="@+id/saveButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:text="Save"
+                android:layout_marginTop="28dp"
+                android:layout_marginEnd="36dp"
+                android:layout_marginBottom="8dp"
+                android:background="@color/colorPrimary"
+                android:text="@string/review_save"
+                android:textColor="@color/common_google_signin_btn_text_dark_default"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/editPinInstructions" />
 
             <Button
                 android:id="@+id/discardButton"
                 android:layout_width="wrap_content"
-                android:layout_height="44dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="100dp"
-                android:text="Discard"
-                app:layout_constraintEnd_toStartOf="@+id/saveButton"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="36dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:background="@color/colorPrimary"
+                android:text="@string/review_discard"
+                android:textColor="@color/common_google_signin_btn_text_dark_default"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/editPinInstructions"
-                tools:text="Discard" />
+                app:layout_constraintVertical_bias="1.0" />
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
 
